// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accent Phrases E2E Tests > アクセント句からAudioQuery生成 > アクセント句からAudioQueryを生成できること 1`] = `
{
  "accent_phrases": [
    {
      "accent": 5,
      "is_interrogative": false,
      "moras": [
        {
          "consonant": "k",
          "consonant_length": 0.07333521,
          "pitch": 5.746836,
          "text": "コ",
          "vowel": "o",
          "vowel_length": 0.12275893,
        },
        {
          "consonant": null,
          "consonant_length": null,
          "pitch": 5.8703785,
          "text": "ン",
          "vowel": "N",
          "vowel_length": 0.0627268,
        },
        {
          "consonant": "n",
          "consonant_length": 0.025895612,
          "pitch": 5.9336033,
          "text": "ニ",
          "vowel": "i",
          "vowel_length": 0.09123733,
        },
        {
          "consonant": "ch",
          "consonant_length": 0.072687574,
          "pitch": 5.918352,
          "text": "チ",
          "vowel": "i",
          "vowel_length": 0.0638728,
        },
        {
          "consonant": "w",
          "consonant_length": 0.06504485,
          "pitch": 5.9521513,
          "text": "ワ",
          "vowel": "a",
          "vowel_length": 0.16350806,
        },
      ],
      "pause_mora": null,
    },
  ],
  "intonationScale": 1,
  "kana": "コンニチワ'",
  "outputSamplingRate": 24000,
  "outputStereo": false,
  "pitchScale": 0,
  "postPhonemeLength": 0.1,
  "prePhonemeLength": 0.1,
  "speedScale": 1,
  "volumeScale": 1,
}
`;

exports[`Accent Phrases E2E Tests > テキストからアクセント句生成 > アクセント句の構造が正しいこと 1`] = `
[
  {
    "accent": 1,
    "is_interrogative": false,
    "moras": [
      {
        "consonant": "t",
        "consonant_length": 0.05410365,
        "pitch": 5.881654,
        "text": "テ",
        "vowel": "e",
        "vowel_length": 0.083722815,
      },
      {
        "consonant": "s",
        "consonant_length": 0.042272054,
        "pitch": 0,
        "text": "ス",
        "vowel": "U",
        "vowel_length": 0.069681786,
      },
      {
        "consonant": "t",
        "consonant_length": 0.06439714,
        "pitch": 5.657431,
        "text": "ト",
        "vowel": "o",
        "vowel_length": 0.13800527,
      },
    ],
    "pause_mora": null,
  },
]
`;

exports[`Accent Phrases E2E Tests > テキストからアクセント句生成 > テキストからアクセント句を生成できること 1`] = `
[
  {
    "accent": 5,
    "is_interrogative": false,
    "moras": [
      {
        "consonant": "k",
        "consonant_length": 0.07333521,
        "pitch": 5.746836,
        "text": "コ",
        "vowel": "o",
        "vowel_length": 0.12275893,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.8703785,
        "text": "ン",
        "vowel": "N",
        "vowel_length": 0.0627268,
      },
      {
        "consonant": "n",
        "consonant_length": 0.025895612,
        "pitch": 5.9336033,
        "text": "ニ",
        "vowel": "i",
        "vowel_length": 0.09123733,
      },
      {
        "consonant": "ch",
        "consonant_length": 0.072687574,
        "pitch": 5.918352,
        "text": "チ",
        "vowel": "i",
        "vowel_length": 0.0638728,
      },
      {
        "consonant": "w",
        "consonant_length": 0.06504485,
        "pitch": 5.9521513,
        "text": "ワ",
        "vowel": "a",
        "vowel_length": 0.16350806,
      },
    ],
    "pause_mora": null,
  },
]
`;

exports[`Accent Phrases E2E Tests > テキストからアクセント句生成 > 複雑なテキストから複数のアクセント句を生成できること 1`] = `
[
  {
    "accent": 1,
    "is_interrogative": false,
    "moras": [
      {
        "consonant": "ky",
        "consonant_length": 0.09275329,
        "pitch": 5.76248,
        "text": "キョ",
        "vowel": "o",
        "vowel_length": 0.08998739,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.7914543,
        "text": "オ",
        "vowel": "o",
        "vowel_length": 0.08501323,
      },
      {
        "consonant": "w",
        "consonant_length": 0.056848645,
        "pitch": 5.5220947,
        "text": "ワ",
        "vowel": "a",
        "vowel_length": 0.08888037,
      },
    ],
    "pause_mora": null,
  },
  {
    "accent": 1,
    "is_interrogative": false,
    "moras": [
      {
        "consonant": "y",
        "consonant_length": 0.062502734,
        "pitch": 5.6059537,
        "text": "ヨ",
        "vowel": "o",
        "vowel_length": 0.09246872,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.962927,
        "text": "イ",
        "vowel": "i",
        "vowel_length": 0.073279224,
      },
    ],
    "pause_mora": null,
  },
  {
    "accent": 1,
    "is_interrogative": false,
    "moras": [
      {
        "consonant": "t",
        "consonant_length": 0.05623082,
        "pitch": 5.9877234,
        "text": "テ",
        "vowel": "e",
        "vowel_length": 0.09776032,
      },
      {
        "consonant": null,
        "consonant_length": null,
        "pitch": 5.8472304,
        "text": "ン",
        "vowel": "N",
        "vowel_length": 0.05936809,
      },
      {
        "consonant": "k",
        "consonant_length": 0.0488815,
        "pitch": 5.638021,
        "text": "キ",
        "vowel": "i",
        "vowel_length": 0.054472137,
      },
      {
        "consonant": "d",
        "consonant_length": 0.04480178,
        "pitch": 5.434057,
        "text": "デ",
        "vowel": "e",
        "vowel_length": 0.09397376,
      },
      {
        "consonant": "s",
        "consonant_length": 0.0637404,
        "pitch": 0,
        "text": "ス",
        "vowel": "U",
        "vowel_length": 0.09543873,
      },
    ],
    "pause_mora": null,
  },
]
`;
